Fri Jun 29 12:04:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Message_Queue.{h,cpp,inl}:
        * ace/Message_Queue_Vx.{h,cpp,inl}:
          Moved ACE_Message_Queue_Vx to its own file, fixes bugzilla bug
          2970

        * ace/ace.mpc:
        * ace/Makefile.am:
          Added new files

Fri Jun 29 11:16:06 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/CDR_Stream.h:
        * ace/CDR_Stream.cpp:

          Reversed the order of declaration and implementation for
          overloads of ostream operator for from_octet and from_wchar.
          The former calls the latter, and some compilers seem to
          require that the latter's full implementation be seen
          before it can be called.

Fri Jun 29 11:03:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_mingw32.GNU:
          Set PLATFORM_SSL_LIBS. Thanks to Andy Wang
          <ypwangandy at gmail dot com> for reporting this

Fri Jun 29 10:59:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added new Bug_2953_Regression

Fri Jun 29 09:48:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_arpa_inet.cpp:
          Fix for VxWorks 6.5

Thu Jun 28 16:12:18 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * ACEXML/common/URL_Addr.h:
        * ACEXML/common/URL_Addr.cpp:

        * examples/Web_Crawler/URL_Addr.h:
        * examples/Web_Crawler/URL_Addr.cpp:

        * protocols/ace/HTBP/HTBP_Addr.h:
        * protocols/ace/HTBP/HTBP_Addr.cpp:

          Update string_to_addr interface to match previous change to
          ACE_INET_Addr in order to silence some compiler warnings

Thu Jun 28 15:18:35 UTC 2007  Steve Huston  <shuston@riverace.com>

        * bin/sandbox.cpp: Removed. There's an identical copy of this file
          in the autobuild repository, autobuild/posixsandbox/sandbox.cpp.
