@@ -310,6 +310,7 @@ libACE_la_SOURCES = \
   Thread_Manager.cpp \
   Thread_Mutex.cpp \
   Thread_Semaphore.cpp \
+  Throughput_Stats.cpp \
   Time_Value.cpp \
   Timeprobe.cpp \
   Timer_Hash.cpp \
@@ -1020,6 +1021,7 @@ nobase_include_HEADERS += \
   Thread_Mutex.inl \
   Thread_Semaphore.h \
   Thread_Semaphore.inl \
+  Throughput_Stats.h \
   Time_Value.h \
   Time_Value.inl \
   Timeprobe.h \
