@@ -250,6 +250,7 @@ project(ACE) : acedefaults, install, other, codecs, token, svcconf, uuid, fileca
     Thread_Manager.cpp
     Thread_Mutex.cpp
     Thread_Semaphore.cpp
+    Throughput_Stats.cpp
     Time_Value.cpp
     Timeprobe.cpp
     Timer_Hash.cpp
